incorporating revisions. more to add

--- a/asej_main.tex
+++ b/asej_main.tex
@@ -39,6 +39,7 @@
 \usepackage{multirow}
 \usepackage{amsmath}
 \usepackage{natbib}
+%\usepackage{cite}
 
 \newboolean{showcomments}
 \setboolean{showcomments}{true}
