--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,4 @@
-This paper proposes a new concept and technique aiming to minimize the amount of effort in manual oracle construction, while still permitting effective fault localization. In comparison with existing prioritization techniques on 12 {\em C} programs, we have shown that our technique only requires on average a small number of test cases to accomplish the target average cost within 1\% accuracy lost, and that it outperforms existing techniques in terms of reducing debugging cost for the subject programs. We have also shown that the differences on real-life programs are statistically significant.
+This paper proposes a new concept and technique named {\em Diversity Maximization Speedup} ({\sc Dms}) aiming to minimize the amount of effort in manual oracle construction, while still permitting effective fault localization. In comparison with six other existing prioritization techniques on 12 {\em C} programs, we have shown that our technique requires on average a smaller number of labelled test cases to achieve the targeted diagnostic cost of subsequent fault localization techniques, and that if the same number of labelled test cases are allowed, it can choose test cases that may be more effective in reducing debugging cost. We have shown that the improvements made by our technique on real-life programs over other existing techniques are statistically significant.
 
 In future, we will evaluate the proposed approach on more subject programs. We will also explore the possibility of adopting more sophisticated trend analysis methods.
 
