--- a/main.bib
+++ b/main.bib
@@ -1587,6 +1587,17 @@
   Month                    = {Aug.}
 }
 
+@InProceedings{Ali2009,
+  Title                    = {Evaluating the Accuracy of Fault Localization Techniques},
+  Author                   = {Ali, S. and Andrews, J.H. and Dhandapani, T. and Wantao Wang},
+  Booktitle                = {IEEE/ACM International Conference onAutomated Software Engineering (ASE)},
+  Year                     = {2009},
+  Pages                    = {76-87},
+
+  ISSN                     = {1938-4300},
+  Keywords                 = {data mining;fault diagnosis;program testing;Tarantula;accuracy evaluation;assertion;coverage based test suites;data mining;fault localization;program locations;Computer science;Costs;Data analysis;Data mining;Genetic mutations;Humans;Programming profession;Software engineering;Software testing;Fault localization;data mining;mutation analysis}
+}
+
 @Article{Alle94,
   Title                    = {Case-Based Reasoning: Business Applications},
   Author                   = {B. P. Allen},
@@ -8954,14 +8965,6 @@
   Title                    = {Locating causes of program failures},
   Author                   = {H. Cleve and A. Zeller},
   Booktitle                = {ICSE},
-  Year                     = {2005},
-  Pages                    = {342--351}
-}
-
-@InProceedings{CZ05,
-  Title                    = {Locating causes of program failures},
-  Author                   = {H. Cleve and A. Zeller},
-  Booktitle                = {ICSE},
   Year                     = {2005}
 }
 
@@ -10218,6 +10221,21 @@
 
   Address                  = {Islamorada, FL},
   Month                    = {Feb.}
+}
+
+@Article{Debroy2013,
+  Title                    = {A consensus-based strategy to improve the quality of fault
+ localization},
+  Author                   = {Vidroha Debroy and
+ W. Eric Wong},
+  Journal                  = {Softw., Pract. Exper.},
+  Year                     = {2013},
+  Number                   = {8},
+  Pages                    = {989-1011},
+  Volume                   = {43},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://dx.doi.org/10.1002/spe.1146}
 }
 
 @InProceedings{DSB04,
@@ -21395,6 +21413,19 @@
   Month                    = {March}
 }
 
+@InProceedings{Jiang2007,
+  Title                    = {Context-aware statistical debugging: from bug predictors
+ to faulty control flow paths},
+  Author                   = {Lingxiao Jiang and
+ Zhendong Su},
+  Booktitle                = {IEEE/ACM International Conference on Automated Software Engineering (ASE)},
+  Year                     = {2007},
+  Pages                    = {184-193},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://doi.acm.org/10.1145/1321631.1321660}
+}
+
 @InProceedings{JS07,
   Title                    = {Context-aware statistical debugging: from bug predictors to faulty control flow paths},
   Author                   = {L. Jiang and Z. Su},
@@ -21737,13 +21768,6 @@
   Address                  = {Orlando, Florida},
   Month                    = {May.},
   Pages                    = {467--477}
-}
-
-@InProceedings{JHS02,
-  Title                    = {Visualization of test information to assist fault detection},
-  Author                   = {J. Jones and M.J. Harrold and J. Stasko},
-  Booktitle                = {ICSE},
-  Year                     = {2002}
 }
 
 @Book{JoWi97,
@@ -27725,6 +27749,24 @@
   Booktitle                = { International Conference on Software Maintenance 2010},
   Year                     = {2010},
   Publisher                = {ICSM}
+}
+
+@Article{Lucia2014,
+  Title                    = {Extended comprehensive study of association measures for
+ fault localization},
+  Author                   = {Lucia and
+ David Lo and
+ Lingxiao Jiang and
+ Ferdian Thung and
+ Aditya Budi},
+  Journal                  = {Journal of Software: Evolution and Process},
+  Year                     = {2014},
+  Number                   = {2},
+  Pages                    = {172-219},
+  Volume                   = {26},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://dx.doi.org/10.1002/smr.1616}
 }
 
 @Article{LuBr00,
@@ -38081,6 +38123,32 @@
   Series                   = {6}
 }
 
+@InProceedings{Steimann2012,
+  Title                    = {Improving Coverage-Based Localization of Multiple Faults
+ Using Algorithms from Integer Linear Programming},
+  Author                   = {Friedrich Steimann and
+ Marcus Frenkel},
+  Booktitle                = {IEEE International Symposium on Software Reliability Engineering (ISSRE)},
+  Year                     = {2012},
+  Pages                    = {121-130},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://dx.doi.org/10.1109/ISSRE.2012.28}
+}
+
+@InProceedings{Steimann2013,
+  Title                    = {Threats to the validity and value of empirical assessments of the accuracy of coverage-based fault locators},
+  Author                   = {Friedrich Steimann and
+ Marcus Frenkel and
+ Rui Abreu},
+  Booktitle                = {International Symposium on Software Testing and Analysis (ISSTA)},
+  Year                     = {2013},
+  Pages                    = {314-324},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://doi.acm.org/10.1145/2483760.2483767}
+}
+
 @InProceedings{STK04,
   Title                    = {Support envelopes: a technique for exploring the structure of association patterns},
   Author                   = {M. Steinbach and P. Tan and V. Kumar},
@@ -42173,6 +42241,22 @@
   Pages                    = {96-105}
 }
 
+@Article{Wong2014,
+  Title                    = {The DStar Method for Effective Software Fault Localization},
+  Author                   = {W. Eric Wong and
+ Vidroha Debroy and
+ Ruizhi Gao and
+ Yihao Li},
+  Journal                  = {IEEE Transactions on Reliability},
+  Year                     = {2014},
+  Number                   = {1},
+  Pages                    = {290-308},
+  Volume                   = {63},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://dx.doi.org/10.1109/TR.2013.2285319}
+}
+
 @Article{Wotawa2002a,
   Title                    = {{On the relationship between model-based debugging and program slicing}},
   Author                   = {Wotawa, Franz},
@@ -42760,6 +42844,24 @@
   Address                  = {San Diego, CA},
   Month                    = {Sept.},
   Pages                    = {56-60}
+}
+
+@Article{Xu2011,
+  Title                    = {Ties within Fault Localization rankings: Exposing and Addressing
+ the Problem},
+  Author                   = {Xiaofeng Xu and
+ Vidroha Debroy and
+ W. Eric Wong and
+ Donghui Guo},
+  Journal                  = {International Journal of Software Engineering and Knowledge
+ Engineering},
+  Year                     = {2011},
+  Number                   = {6},
+  Pages                    = {803-827},
+  Volume                   = {21},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://dx.doi.org/10.1142/S0218194011005505}
 }
 
 @InProceedings{T11,
