fix related work

--- a/main.bib
+++ b/main.bib
@@ -2,39 +2,6 @@
 % Encoding: Cp1252
 
 
-@InProceedings{DBLP:conf/issta/ArcuriB11,
-  Title                    = {Adaptive random testing: an illusion of effectiveness?},
-  Author                   = {Andrea Arcuri and
- Lionel C. Briand},
-  Booktitle                = {ISSTA},
-  Year                     = {2011},
-  Pages                    = {265-275},
-
-  Bibsource                = {DBLP, http://dblp.uni-trier.de},
-  Crossref                 = {DBLP:conf/issta/2011},
-  Ee                       = {http://doi.acm.org/10.1145/2001420.2001452}
-}
-
-@InProceedings{DBLP:conf/issta/ParninO11,
-  Title                    = {Are automated debugging techniques actually helping programmers?},
-  Author                   = {C. Parnin and
- A. Orso},
-  Booktitle                = {ISSTA},
-  Year                     = {2011},
-  Pages                    = {199-209},
-
-  Bibsource                = {DBLP, http://dblp.uni-trier.de},
-  Crossref                 = {DBLP:conf/issta/2011},
-  Ee                       = {http://doi.acm.org/10.1145/2001420.2001445}
-}
-
-@InProceedings{OLAP98,
-  Title                    = {{MDAPI} Specification Version 2.0},
-  Author                   = {{OLAP} council},
-  Booktitle                = {www.olapcouncil.org/research/apily.htm},
-  Year                     = {1998}
-}
-
 @InProceedings{OLAP98,
   Title                    = {{MDAPI} Specification Version 2.0},
   Author                   = {{OLAP} council},
@@ -48,23 +15,6 @@
   Booktitle                = {(to be submitted)},
   Year                     = {2006 },
   Month                    = {Feb.}
-}
-
-@InProceedings{Tasn+06,
-  Title                    = {Manuscript in preparation},
-  Author                   = {A. Tasneem~et~al.},
-  Booktitle                = {(to be submitted)},
-  Year                     = {2006 },
-  Month                    = {Feb.}
-}
-
-@Article{Land+01,
-  Title                    = {Initial sequencing and analysis of the human genome},
-  Author                   = {E. Lander~et~al.},
-  Journal                  = {Nature },
-  Year                     = {2001},
-  Pages                    = {860-921},
-  Volume                   = {409}
 }
 
 @Article{Land+01,
@@ -2398,6 +2348,18 @@
   Series                   = {2}
 }
 
+@InProceedings{DBLP:conf/issta/ArcuriB11,
+  Title                    = {Adaptive random testing: an illusion of effectiveness?},
+  Author                   = {Andrea Arcuri and
+ Lionel C. Briand},
+  Booktitle                = {ISSTA},
+  Year                     = {2011},
+  Pages                    = {265-275},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://doi.acm.org/10.1145/2001420.2001452}
+}
+
 @InProceedings{AHLP01,
   Title                    = {Query Processing in Broadcasted Spatial Index Treess},
   Author                   = {W. G. Aref and S. Hambrusch and C.-M. Liu and S. Prabhakar },
@@ -4091,13 +4053,6 @@
   Author                   = {M. J. A. Berry and G. S. Linoff},
   Publisher                = {John Wiley \& Sons},
   Year                     = {2004}
-}
-
-@Book{Berr03,
-  Title                    = {Survey of Text Mining: Clustering, Classification, and Retrieval },
-  Author                   = {M. W. Berry},
-  Publisher                = {Springer},
-  Year                     = {2003}
 }
 
 @Book{Berr03,
@@ -9962,13 +9917,6 @@
   Year                     = {2006}
 }
 
-@InProceedings{DLWZ06,
-  Title                    = {Mining Object Behavior with {ADABU}},
-  Author                   = {V. Dallmeier and C. Lindig and A. Wasylkowski and A. Zeller},
-  Booktitle                = {WODA},
-  Year                     = {2006}
-}
-
 @Article{DH01a,
   Title                    = {{{LSC}s: Breathing Life into Message Sequence Charts}},
   Author                   = {W. Damm and D. Harel},
@@ -11469,16 +11417,6 @@
 
   Address                  = {ACM Press},
   Pages                    = {155-167}
-}
-
-@InProceedings{Druc97,
-  Title                    = {Improving regressors using boosting techniques},
-  Author                   = {H. Drucker},
-  Booktitle                = {Proc. 1997 Int. Conf. Machine Learning (ICML'97)},
-  Year                     = {1997},
-
-  Address                  = {Nashvill, TN},
-  Pages                    = {107-115}
 }
 
 @InProceedings{Druc97,
@@ -15915,13 +15853,6 @@
   Volume                   = {3},
 
   Series                   = {3}
-}
-
-@Book{GrIy94,
-  Title                    = {Regression Analysis: Concepts and Applications},
-  Author                   = {F. A. Graybill and H. K. Iyer},
-  Publisher                = {Duxbury Press},
-  Year                     = {1994}
 }
 
 @Book{GrIy94,
@@ -21752,13 +21683,6 @@
   Year                     = {2005}
 }
 
-@InProceedings{JH05,
-  Title                    = {Empirical Evaluation of the Tarantula Automatic Fault-Localization Technique},
-  Author                   = {J.A. Jones and M.J. Harrold},
-  Booktitle                = {ASE},
-  Year                     = {2005}
-}
-
 @InProceedings{JHS02,
   Title                    = {Visualization of test information to assist fault detection},
   Author                   = {J. Jones and M.J. Harrold and J. Stasko},
@@ -26738,13 +26662,6 @@
 }
 
 @InProceedings{LYFHM05,
-  Title                    = {SOBER: Statistical Model-based Bug Localization},
-  Author                   = {C. Liu and X. Yan and L. Fei and J. Han and S.P. Midkiff},
-  Booktitle                = {ESEC/FSE},
-  Year                     = {2005}
-}
-
-@InProceedings{LYFHM05,
   Title                    = {{SOBER}: Statistical Model-based Bug Localization},
   Author                   = {Chao Liu and X. Yan and L. Fei and J. Han and S. P. Midkiff},
   Booktitle                = {ESEC/FSE},
@@ -27719,36 +27636,11 @@
   Pages                    = {204-218}
 }
 
-@Article{lucia2013,
-  Title                    = {Extended Comprehensive Study of Association Measures for Fault Localization},
-  Author                   = {Lucia and
- David Lo and
- Lingxiao Jiang and
- Aditya Budi},
-  Journal                  = {Journal of Software: Evolution and Process, to appear},
-  Year                     = {2013}
-}
-
 @InProceedings{LLJB10,
   Title                    = {Comprehensive Evaluation of Association Measures for Fault Localization},
   Author                   = {Lucia and D. Lo and L. Jiang and A. Budi},
-  Booktitle                = {ICSM},
+  Booktitle                = {International Conference on Software Maintenance (ICSM)},
   Year                     = {2010}
-}
-
-@InProceedings{LLJB10,
-  Title                    = {Comprehensive Evaluation of Association Measures for Fault Localization},
-  Author                   = {Lucia and D. Lo and L. Jiang and A. Budi},
-  Booktitle                = {ICSM},
-  Year                     = {2010}
-}
-
-@InProceedings{lucia,
-  Title                    = {Comprehensive Evaluation of Association Measures for Fault Localization},
-  Author                   = {Lucia and David Lo and Lingxiao Jiang and Aditya Budi},
-  Booktitle                = { International Conference on Software Maintenance 2010},
-  Year                     = {2010},
-  Publisher                = {ICSM}
 }
 
 @Article{Lucia2014,
@@ -30469,6 +30361,27 @@
   Ee                       = {http://doi.acm.org/10.1145/1273463.1273467}
 }
 
+@Article{Naish2011,
+  Title                    = {A Model for Spectra-based Software Diagnosis},
+  Author                   = {Naish, Lee and Lee, Hua Jie and Ramamohanarao, Kotagiri},
+  Journal                  = {ACM TOSEM},
+  Year                     = {2011},
+
+  Month                    = {Aug},
+  Number                   = {3},
+  Pages                    = {11:1--11:32},
+  Volume                   = {20},
+
+  Acmid                    = {2000795},
+  Address                  = {New York, NY, USA},
+  Articleno                = {11},
+  ISSN                     = {1049-331X},
+  Issue_date               = {August 2011},
+  Keywords                 = {Fault localization, program spectra, statistical debugging},
+  Numpages                 = {32},
+  Publisher                = {ACM}
+}
+
 @InProceedings{NTL98,
   Title                    = {Evaluating Usefulness for Dynamic Classification},
   Author                   = {G. Nakgaeizadeh and C. Taylor and C. Lanquillon},
@@ -31896,6 +31809,18 @@
   Address                  = {San Diego, CA},
   Month                    = {Feb.},
   Pages                    = {23-32}
+}
+
+@InProceedings{DBLP:conf/issta/ParninO11,
+  Title                    = {Are automated debugging techniques actually helping programmers?},
+  Author                   = {C. Parnin and
+ A. Orso},
+  Booktitle                = {ISSTA},
+  Year                     = {2011},
+  Pages                    = {199-209},
+
+  Bibsource                = {DBLP, http://dblp.uni-trier.de},
+  Ee                       = {http://doi.acm.org/10.1145/2001420.2001445}
 }
 
 @Book{PCKW89,
@@ -34215,14 +34140,6 @@
   Journal                  = {Machine Learning},
   Year                     = {1986},
   Volume                   = {1}
-}
-
-@InProceedings{RR03,
-  Title                    = {Fault Localization With Nearest Neighbor Queries},
-  Author                   = {M. Renieris and S.P. Reiss},
-  Booktitle                = {ASE},
-  Year                     = {2003},
-  Pages                    = {141--154}
 }
 
 @InProceedings{RR03,
@@ -42522,6 +42439,27 @@
   Year                     = {2007}
 }
 
+@Article{Xie2013,
+  Title                    = {A Theoretical Analysis of the Risk Evaluation Formulas for Spectrum-based Fault Localization},
+  Author                   = {Xie, Xiaoyuan and Chen, Tsong Yueh and Kuo, Fei-Ching and Xu, Baowen},
+  Journal                  = {ACM TOSEM},
+  Year                     = {2013},
+
+  Month                    = {Oct},
+  Number                   = {4},
+  Pages                    = {31:1--31:40},
+  Volume                   = {22},
+
+  Acmid                    = {2522924},
+  Address                  = {New York, NY, USA},
+  Articleno                = {31},
+  ISSN                     = {1049-331X},
+  Issue_date               = {October 2013},
+  Keywords                 = {Debugging, risk evaluation formulas, spectrum-based fault localization, testing},
+  Numpages                 = {40},
+  Publisher                = {ACM}
+}
+
 @InProceedings{Xin2009,
   Title                    = {Memory Slicing},
   Author                   = {Xin, Bin and Zhang, Xiangyu},
@@ -44719,21 +44657,6 @@
   Timestamp                = {2010.04.09}
 }
 
-@Book{Zeller2009,
-  Title                    = {Why Programs Fail: A Guide to Systematic Debugging},
-  Author                   = {Andreas Zeller},
-  Editor                   = {Tim Cox},
-  Publisher                = {Morgan Kaufmann},
-  Year                     = {2009},
-  Edition                  = {2nd},
-
-  ISBN                     = {0123745152},
-  Keywords                 = {debugging},
-  Mendeley-tags            = {debugging},
-  Owner                    = {lxjiang},
-  Timestamp                = {2010.04.09}
-}
-
 @InProceedings{Zeller2002a,
   Title                    = {Isolating cause-effect chains from computer programs},
   Author                   = {Andreas Zeller},
@@ -44745,26 +44668,6 @@
   ISBN                     = {1-58113-514-9},
   Owner                    = {lxjiang},
   Timestamp                = {2010.04.16}
-}
-
-@InProceedings{Zeller2002a,
-  Title                    = {Isolating cause-effect chains from computer programs},
-  Author                   = {Andreas Zeller},
-  Booktitle                = {FSE},
-  Year                     = {2002},
-  Pages                    = {1--10},
-
-  Doi                      = {http://doi.acm.org/10.1145/587051.587053},
-  ISBN                     = {1-58113-514-9},
-  Owner                    = {lxjiang},
-  Timestamp                = {2010.04.16}
-}
-
-@Article{ZH02,
-  Title                    = {Simplifying and isolating failure-inducing input},
-  Author                   = {A. Zeller and R. Hildebrandt},
-  Journal                  = {IEEE Transaction on Software Engineering},
-  Year                     = {2002}
 }
 
 @Article{ZH02,
